log/build_2025-07-17_15-35-27/mecacontrollerpython_pkg/stderr.log
  File "/home/robot/ros2_ws/MecaControllerPythonWithJoystick-main/install/mecacontrollerpython_pkg/lib/python3.10/site-packages/mecacontrollerpython_pkg/freq_publisher.py", line 34
    direction = 0 if omega >= 0 else 
                                     ^
SyntaxError: invalid syntax

